# kermit

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cargo.toml.old  LICENSE-MIT  README.md  USAGE.md  cliff.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
kermit/: CHANGELOG.md  Cargo.toml  README.md
kermit-algos/: CHANGELOG.md  Cargo.toml  README.md
kermit-algos/benches/: main.rs
kermit-algos/src/: const_rewrite.rs  join_algo.rs  join_query.rs  leapfrog_join.rs  leapfrog_triejoin.rs  lib.rs  singleton.rs  trie_iter_kind.rs
kermit-algos/src/queries/: join_query.rs  mod.rs  parser.rs
kermit-algos/tests/: leapfrog_triejoin.rs  lib.rs  test1.csv.test
kermit-bench/: CHANGELOG.md  Cargo.toml  README.md
kermit-bench/src/: benchmark.rs  cache.rs  definition.rs  discovery.rs  downloader.rs  error.rs  lib.rs  manager.rs  utils.rs
kermit-bench/src/benchmarks/: exponential.rs  factorial.rs  mod.rs  oxford.rs
kermit-bench/src/dataset/: dataset.rs  downloader.rs  manager.rs  mod.rs
kermit-bench/src/dataset/datasets/: mod.rs  oxford.rs
kermit-bench/src/generation/: graphs.rs  mod.rs  tuples.rs
kermit-db/: Cargo.toml
kermit-db/src/: lib.rs
kermit-derive/: CHANGELOG.md  Cargo.toml  README.md
kermit-derive/src/: lib.rs
kermit-derive/tests/: derive_into_trie_iter.rs
kermit-ds/: CHANGELOG.md  Cargo.toml  README.md  test.csv
kermit-ds/benches/: main.rs  relation_benchmarks.rs  space_benchmarks.rs
kermit-ds/benches/common/: mod.rs  tuple_generation.rs
kermit-ds/src/: heap_size.rs  iterator.rs  key_type.rs  lib.rs  node.rs  relation.rs  relation_builder.rs  trie_builder.rs  tuple_trie.rs  variable_type.rs
kermit-ds/src/ds/: mod.rs
kermit-ds/src/ds/column_trie/: column_trie_iter.rs  implementation.rs  mod.rs
kermit-ds/src/ds/relation_trie/: implementation.rs  mod.rs  relation_trie.rs  relation_trie_builder.rs  relation_trie_iter.rs  trie_node.rs  trie_traits.rs
kermit-ds/src/ds/tree_trie/: implementation.rs  mod.rs  tree_trie_iter.rs  trie_traits.rs
kermit-ds/src/relation_trie/: mod.rs  node.rs  relation_trie.rs  relation_trie_builder.rs  relation_trie_iter.rs  trie.rs  trie_builder.rs  trie_iter.rs  trie_node.rs  trie_traits.rs
kermit-ds/src/relational_trie/: mod.rs  relational_trie.rs  trie_builder.rs  trie_iter.rs
kermit-ds/src/shared/: mod.rs  nodes.rs
kermit-ds/src/testing/: macros.rs  mod.rs  utils.rs
kermit-ds/src/trie/: mod.rs  node.rs  relation_trie.rs  relational_trie.rs  trie_builder.rs  trie_iter.rs
kermit-ds/src/tuple_trie/: iterator.rs  mod.rs  trie_builder.rs  trie_iter.rs  tuple_trie.rs
kermit-ds/tests/: parquet_tests.rs  trie_tests.rs
kermit-ds/tests/common/: macros.rs  mod.rs  utils.rs
kermit-rdf/: Cargo.toml
kermit-rdf/queries/lubm/: q1.sparql  q10.sparql  q11.sparql  q12.sparql  q13.sparql  q14.sparql  q2.sparql  q3.sparql  q4.sparql  q5.sparql  q6.sparql  q7.sparql  q8.sparql  q9.sparql
kermit-rdf/src/: dict.rs  error.rs  expected.rs  lib.rs  ntriples.rs  parquet.rs  partition.rs  pipeline.rs  value.rs  yaml_emit.rs
kermit-rdf/src/driver/: invoke.rs  mod.rs  sandbox.rs
kermit-rdf/src/lubm/: README.md  driver.rs  entailment.rs  mod.rs  pipeline.rs  queries.rs  sandbox.rs
kermit-rdf/src/sparql/: bindings.rs  mod.rs  parser.rs  translator.rs
kermit-rdf/tests/: e2e_lubm.rs  e2e_watdiv.rs  lubm_entailment_smoke.rs  lubm_pipeline.rs  lubm_translator.rs  pipeline.rs  translator_golden.rs
kermit/examples/star/: README.md  earns.csv  located.csv  main.rs  star_query.dl  works_in.csv
kermit/src/: bench_report.rs  benchmarker.rs  db.rs  join_algos.rs  lib.rs  main.rs  materialize.rs  measurement.rs  parser.rs  triejoin_db.rs  utils.rs
kermit/src/testing/: macros.rs  mod.rs  utils.rs
kermit/tests/: cli_join_tests.rs  cli_watdiv_gen.rs  integration_tests.rs  join_tests.rs  tests.rs  watdiv_correctness.rs
kermit/tests/common/: macros.rs  mod.rs  utils.rs
kermit/tests/fixtures/: edge.csv  intersect_query.dl  path_query.dl  second.csv
kermit/tests/fixtures/watdiv-mini/: watdiv.mini.nt
python/kermit-lab/: .gitignore  README.md  pyproject.toml
python/kermit-lab/kermit_lab/: __init__.py  __main__.py  analysis.py  frame.py  loader.py
python/kermit-lab/kermit_lab/drivers/: __init__.py  main.py
python/kermit-lab/kermit_lab/plots/: __init__.py  bar_queries.py  bar_space.py  bar_time.py  dist.py  scaling.py  tradeoff.py
python/kermit-lab/kermit_lab/styles/: thesis.mplstyle
python/kermit-lab/notebooks/: 01_quick_start.ipynb  02_scaling.ipynb  03_compare_ds.ipynb  04_watdiv_queries.ipynb  05_distributions.ipynb
python/kermit-lab/tests/: test_analysis.py  test_axis_mapping.py  test_bar_queries.py  test_bar_space.py  test_bar_time.py  test_criterion.py  test_dist.py  test_frame.py  test_loader.py  test_plots_figure_return.py  test_render_all.py  test_scaling.py  test_tradeoff.py
python/kermit-plot/: .gitignore  README.md  pyproject.toml
python/kermit-plot/kermit_plot/: __init__.py  axis_mapping.py  loader.py
python/kermit-plot/kermit_plot/drivers/: __init__.py
python/kermit-plot/kermit_plot/plots/: bar_queries.py  dist.py  tradeoff.py
python/kermit-plot/kermit_plot/styles/: __init__.py
python/kermit-plot/tests/: conftest.py  test_bar_queries.py  test_bar_space.py  test_bar_time.py  test_scaling.py
scripts/kermit-plot/: README.md  pyproject.toml
scripts/kermit-plot/kermit_plot/: __main__.py  criterion.py
scripts/kermit-plot/kermit_plot/drivers/: main.py  render_all.py
scripts/kermit-plot/kermit_plot/plots/: __init__.py  bar_space.py  (+1 more)
scripts/kermit-plot/tests/: test_axis_mapping.py  test_criterion.py  test_dist.py  test_loader.py  test_render_all.py  test_tradeoff.py
scripts/watdiv-preprocess/: README.md  pyproject.toml
scripts/watdiv-preprocess/tests/: fixture.nt  test_driver_generic.py  test_expected.py  test_partitioner.py  test_pipeline.py  test_translator.py  test_yaml_emitter.py
scripts/watdiv-preprocess/watdiv_preprocess/: __init__.py  __main__.py  dict_builder.py  expected.py  partitioner.py  pipeline.py  sparql_translator.py  yaml_emitter.py
(+103 files in other folders)
