[workspace]
resolver = "2"
members = ["kermit", "kermit-algos", "kermit-ds", "kermit-kvs", "kermit-iters", "kermit-derive"]

[workspace.package]
authors = ["Aidan Bailey"]
edition = "2021"
homepage = "https://github.com/aidan-bailey/kermit"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/aidan-bailey/kermit"

[patch.crates-io]
kermit = { path = "kermit" }
kermit-kvs = { path = "kermit-kvs" }
kermit-ds = { path = "kermit-ds" }
kermit-iters = { path = "kermit-iters" }
kermit-algos = { path = "kermit-algos" }
kermit-derive = { path = "kermit-derive" }
