[package]
name = "kermit-algos"
description = "Algorithms used in Kermit"
version = "0.0.8"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-iters = { version = "0.0.6", path = "../kermit-iters" }
kermit-derive = { version = "0.0.3", path = "../kermit-derive" }
winnow = "0.7.13"
clap = { version = "4.4", features = ["derive" ] }

#[[bench]]
#name = "main"
#harness = false

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
kermit-ds = { path = "../kermit-ds" }
test-case = "3.3.1"
