[package]
name = "kermit-algos"
description = "Algorithms used in Kermit"
version = "0.0.9"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-iters = { version = "0.0.7", path = "../kermit-iters" }
kermit-derive = { version = "0.0.4", path = "../kermit-derive" }
kermit-parser = { version = "0.0.1", path = "../kermit-parser" }
winnow = "0.7.13"
clap = { version = "4.4", features = ["derive" ] }

#[[bench]]
#name = "main"
#harness = false

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
kermit-ds = { path = "../kermit-ds" }
test-case = "3.3.1"
