[package]
name = "kermit-bench"
description = "Benchmarking utilities and benchmarks"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
arrow = "56.2.0"
fs_extra = "1.3.0"
parquet = "56.2.0"
petgraph = "0.8.3"
clap = { version = "4.4", features = ["derive" ] }

[dev-dependencies]

