[package]
name = "kermit-bench"
description = "Benchmarking utilities and benchmarks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive" ] }
num-traits = "0.2.19"
rand = "0.9.1"

