[package]
name = "kermit-db"
description = "Relational databases used in Kermit"
version = "0.0.1-dev"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-kvs = { version = "0.0.2-dev", path = "../kermit-kvs" }
kermit-ds = { version = "0.0.4-dev", path = "../kermit-ds" }
