[package]
name = "kermit-ds"
description = "Data structures used in Kermit"
version = "0.0.9"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
csv = "1.1"
kermit-iters = { version = "0.0.4", path = "../kermit-iters" }
kermit-derive = { version = "0.0.2", path = "../kermit-derive" }

[[bench]]
name = "relation_benchmarks"
harness = false

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"
paste = "1.0.15"
num-traits = "0.2.19"
