[package]
name = "kermit-ds"
description = "Data structures used in Kermit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
arrow = "56.2.0"
csv = "1.1"
parquet = "56.2.0"
kermit-iters = { version = "0.0.8", path = "../kermit-iters" }
kermit-derive = { version = "0.0.5", path = "../kermit-derive" }
clap = { version = "4.4", features = ["derive" ] }

[dev-dependencies]
paste = "1.0.15"
