[package]
name = "kermit-rdf"
description = "RDF/SPARQL preprocessing pipeline for Kermit benchmarks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-parser = { version = "0.0.2", path = "../kermit-parser" }
kermit-ds = { version = "0.1.0", path = "../kermit-ds" }
kermit-bench = { version = "0.1.0", path = "../kermit-bench" }
arrow = "56.2.0"
parquet = "56.2.0"
oxrdf = "0.2"
oxttl = "0.1"
spargebra = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
