[package]
name = "kermit"
description = "Relational data structures, iterators and algorithms"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-ds = { version = "0.1.0", path = "../kermit-ds" }
kermit-iters = { version = "0.0.8", path = "../kermit-iters" }
kermit-algos = { version = "0.0.10", path = "../kermit-algos" }
kermit-bench = { version = "0.1.0", path = "../kermit-bench" }
kermit-parser = { version = "0.0.2", path = "../kermit-parser" }
clap = { version = "4.4", features = ["derive"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
anyhow = "1.0"

[dev-dependencies]
paste = "1.0.15"
