[package]
name = "kermit"
description = "Relational data structures, iterators and algorithms"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
kermit-ds = { version = "0.1.0", path = "../kermit-ds" }
kermit-iters = { version = "0.0.8", path = "../kermit-iters" }
kermit-algos = { version = "0.0.10", path = "../kermit-algos" }
kermit-bench = { version = "0.1.0", path = "../kermit-bench" }
kermit-parser = { version = "0.0.2", path = "../kermit-parser" }
kermit-rdf = { version = "0.1.0", path = "../kermit-rdf" }
clap = { version = "4.4", features = ["derive", "env"] }
criterion = { version = "0.7.0", default-features = false, features = ["rayon", "cargo_bench_support"] }
anyhow = "1.0"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
paste = "1.0.15"
tempfile = "3"
