[project]
name = "kermit-lab"
version = "0.1.0"
description = "Plot kermit Criterion benchmark output for thesis figures"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
]

[project.scripts]
kermit-lab = "kermit_lab.drivers.main:main"

[dependency-groups]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kermit_lab"]
