[project]
name = "kermit-lab"
version = "0.1.0"
description = "Notebook-first analysis of kermit Criterion benchmark output"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.scripts]
kermit-lab = "kermit_lab.drivers.main:main"

[dependency-groups]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kermit_lab"]
