[project]
name = "kermit-plot"
version = "0.1.0"
description = "Plot kermit Criterion benchmark output for thesis figures"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numpy>=1.26",
]

[project.scripts]
kermit-plot = "kermit_plot.drivers.main:main"

[dependency-groups]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kermit_plot"]
